Fix logout button layout issue

--- a/frontend/src/styles/components/_profileMenu.scss
+++ b/frontend/src/styles/components/_profileMenu.scss
@@ -22,5 +22,6 @@
     transform: translateX(40%) translateY(-100%);
     transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
     opacity: 0;
+    z-index: -1;
   }
 }
